Work in progress, foo content

--- a/index.html
+++ b/index.html
@@ -2,3 +2,9 @@
 layout: default
 title: Home
 ---
+<p>
+	This is test blog based on Jekyll. Feel free to checkout.
+</p>
+<p>
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe soluta iusto omnis aut natus quaerat beatae eos quod, eveniet velit veritatis dolores necessitatibus aliquam, fugit nulla, aperiam doloribus vel, rerum magni! Ducimus officia possimus soluta nihil tenetur at, ipsam sit, recusandae iusto error eveniet commodi reiciendis eaque unde quod atque?
+</p>
